force-app/main/default/objects/NotificationChannel__c/NotificationChannel__c.object-meta.xml
<CustomObject>
    <label>Notification Channel</label>
    <nameField>
        <label>Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>