force-app/main/default/objects/NotificationChannel__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex Exception</fullName>
            </value>
            <value>
                <fullName>DML Exception</fullName>
            </value>
            <value>
                <fullName>Limit Exception</fullName>
            </value>
            <value>
                <fullName>Callout Exception</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Aura</fullName>
            </value>
            <value>
                <fullName>Jobs</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Account Blocked</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
                <isActive>false</isActive>
                <label>Integration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>