force-app/main/default/objects/NotificationChannel__c/fields/MinSeverity__c.field-meta.xml
<CustomField>
    <fullName>MinSeverity__c</fullName>
    <label>Min Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>WARNING</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>CRITICAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>