force-app/main/default/objects/NotificationChannel__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>NotificationChannel__c</referenceTo>
    <relationshipLabel>Notification Channels</relationshipLabel>
    <relationshipName>Notification_Channels</relationshipName>
    <type>Lookup</type>
</CustomField>