force-app/main/default/objects/NotificationChannel__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>errSource</valueSetName>
    </valueSet>
</CustomField>