force-app/main/default/objects/NotificationChannel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Category__c</columns>
    <columns>MinSeverity__c</columns>
    <columns>IsEnabled__c</columns>
    <columns>Parent__c</columns>
    <columns>Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>